--- a/React/demovite/src/index.css
+++ b/React/demovite/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+/* tag use css */
+@layer base{
+    h1{
+        font-size: 30px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-weight: bold;
+    }
+}
